[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniverse"
version = "0.0.63"
description = "A collection of code for Omniverse."
authors = [{name="GAO Hongnan", email="hongnangao@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "hydra-core==1.3.2",
    "matplotlib>=3.8.0,<3.9.1",
    "numpy>=1.26.0,<2.0.0",
    "openai>=1.1.1",
    "pandas>=2.1.1",
    "portalocker>=2.8.2",
    "pydantic==2.5.2",
    "rich>=13.6.0",
    "scikit-learn==1.5.0",
    "seaborn>=0.13.0",
    "tiktoken>=0.5.2",
    "torch>=2.1.0",
    "torchinfo>=1.8.0",
    "torchtext",
    "torchvision>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/gao-hongnan/omniverse"
Issues = "https://github.com/gao-hongnan/omniverse/issues"

[project.optional-dependencies]
dev = [
    "bandit==1.7.5",
    "black==24.10.0",
    "colorama==0.4.6",
    "cookiecutter==2.4.0",
    "coverage==7.3.2",
    "ghp-import==2.1.0",
    "ipywidgets==7.7.2",
    "isort==5.13.2",
    "jupytext==1.15.2",
    "jupyter-book==1.0.0",
    "mypy==1.13.0",
    "pandas-stubs==2.1.4.231227",
    "pre-commit==4.0.1",
    "pytest==7.4.3",
    "ruff==0.8.2",
    "sphinx-proof==0.2.0",
    "sphinx-sitemap==2.5.1",
    "sphinxcontrib-mermaid==0.1.0",
    "sphinx-inline-tabs==2023.4.21",
    "typeguard==4.1.5",
    "types-psutil==6.0.0.20240621",
    "types-requests==2.31.0.10",
    "types-tabulate==0.9.0.20240106",
    "types-tqdm==4.66.0.5",
    "types-PyYAML==6.0.12.20240917",
]

serving = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "gunicorn==21.2.0",
    "Faker==23.2.0",
    "sqlmodel==0.0.14",
    "SQLAlchemy==2.0.22",
    "pydantic==2.5.2",
]

[tool.setuptools.packages.find]
include = ["omnivault*"]

# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv_*",
    "venv",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.isort]
profile = "black"
line_length = 120
verbose = false
skip = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv_*",
    "venv",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]
skip_glob = [
    "**/venv_*",
    "venv",
    ".venv",
]

[tool.black]
line-length = 120           # NOTE: in sync with ruff
target-version = ['py39']   # NOTE: in sync with ruff
verbose = false
diff = false
color = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
