[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniverse"
version = "0.0.63"
description = "A collection of code for Omniverse."
authors = [{name="GAO Hongnan", email="hongnangao@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "hydra-core==1.3.2",
    "matplotlib>=3.8.0,<3.9.1",
    "myst>=0.0.1",
    "numpy>=1.26.0,<2.0.0",
    "openai>=1.1.1",
    "pandas>=2.1.1",
    "portalocker>=2.8.2",
    "pydantic==2.5.2",
    "rich>=13.6.0",
    "scikit-learn==1.5.0",
    "seaborn>=0.13.0",
    "tiktoken>=0.5.2",
    "torch>=2.1.0",
    "torchinfo>=1.8.0",
    "torchtext",
    "torchvision>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/gao-hongnan/omniverse"
Issues = "https://github.com/gao-hongnan/omniverse/issues"

[project.optional-dependencies]
serving = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "gunicorn==21.2.0",
    "Faker==23.2.0",
    "sqlmodel==0.0.14",
    "SQLAlchemy==2.0.22",
    "pydantic==2.5.2",
]

[tool.hatch.build.targets.wheel]
packages = ["omnivault"]

[dependency-groups]
lint = [
    "ruff==0.8.2",
    "bandit==1.7.5",
    "pre-commit==4.0.1",
    "commitizen==3.13.0",
]

type = [
    "mypy==1.13.0",
    "pandas-stubs==2.1.4.231227",
    "types-psutil==6.0.0.20240621",
    "types-requests==2.31.0.10",
    "types-tabulate==0.9.0.20240106",
    "types-tqdm==4.66.0.5",
    "types-PyYAML==6.0.12.20240917",
]

test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "coverage==7.3.2",
    "typeguard==4.1.5",
    "colorama==0.4.6",
]

docs = [
    "jupyter-book>=2.0.0a0",
    "sphinx-inline-tabs",
    "sphinx-proof",
    "sphinx-sitemap",
    "sphinxcontrib-mermaid",
    "ghp-import",
    "ipywidgets",
]

dev = [
    { include-group = "lint" },
    { include-group = "type" },
    { include-group = "test" },
    { include-group = "docs" },
]

[tool.bandit]
exclude_dirs = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv_*",
    "venv",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
